# roe

./: Cargo.toml  README.md  build.rs
proto/: application_factory.proto  application_manager.proto  configurable_application.proto  deploy_manager.proto  managed_application.proto
src/: client.rs  lib.rs  main.rs  output.rs
src/commands/: application.rs  config.rs  deploy.rs  info.rs  mod.rs  terminate.rs
