[package]
name = "roe"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "roe-cli"
path = "src/bin/roe-cli.rs"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.17"

[build-dependencies]
tonic-build = "0.12"
