[package]
name = "hdds"
version = "0.1.0"
edition = "2024"

[lib]
name = "hdds"
path = "src/lib.rs"

[[bin]]
name = "hdds-cli"
path = "src/bin/hdds-cli.rs"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.17"

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
