[package]
name = "roe"
version = "0.1.0"
edition = "2024"

[lib]
name = "roe"
path = "src/lib.rs"

[[bin]]
name = "roe-cli"
path = "src/bin/roe-cli.rs"

[dependencies]
hdds = { version = "1.1.1", features = ["rpc"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.17"
